@@ -482,7 +482,7 @@ public class Concept extends BaseOpenmrsObject implements Auditable, Retireable,
 			
 			//if the locale has an variants e.g en_GB, try names in the locale excluding the country code i.e en
 			if (!StringUtils.isBlank(currentLocale.getCountry()) || !StringUtils.isBlank(currentLocale.getVariant())) {
-				Locale broaderLocale = new Locale(currentLocale.getLanguage());
+				Locale broaderLocale = Locale.of(currentLocale.getLanguage());
 				ConceptName prefNameInBroaderLoc = getPreferredName(broaderLocale);
 				if (prefNameInBroaderLoc != null) {
 					return prefNameInBroaderLoc;
@@ -578,7 +578,7 @@ public class Concept extends BaseOpenmrsObject implements Auditable, Retireable,
 		}
 		
 		// if we reach here, there were no matching names, so try to look in the parent locale
-		Locale parent = new Locale(locale.getLanguage());
+		Locale parent = Locale.of(locale.getLanguage());
 		if (!parent.equals(locale)) {
 			return getName(parent, ofType, havingTag);
 		} else {
@@ -619,7 +619,7 @@ public class Concept extends BaseOpenmrsObject implements Auditable, Retireable,
 		}
 		
 		if (!exact) {
-			Locale broaderLocale = new Locale(locale.getLanguage());
+			Locale broaderLocale = Locale.of(locale.getLanguage());
 			ConceptName name = getNameInLocale(broaderLocale);
 			return name != null ? name : getName();
 		}
